Test(:white_check_mark:) ProductServiceTest find all products by first category